# SimpleDatabase

./: CMakeLists.txt  README.md
DatabaseCLI/: CMakeLists.txt
DatabaseCLI/inc/: options.hpp
DatabaseCLI/src/: CMakeLists.txt  main.cpp  options.cpp
DatabaseCode/inc/: database.hpp  groundUpDB.hpp  json_node.hpp
DatabaseCode/inc/extensions/: embedded_database.hpp
DatabaseCode/src/: CMakeLists.txt  database.cpp  groundUpDB.cpp  json_node.cpp
DatabaseCode/test/: CMakeLists.txt  database_test.cpp  json_node_test.cpp
